---------------------------------------------------------------------------------------------------
Version: 2.2.5
Game Versions: e1.7.2,e1.8.0,e1.8.1,e1.9.0
* Added better debugger detection
* Added IL offset reporting
---------------------------------------------------------------------------------------------------
Version: 2.2.4
Game Versions: e1.7.2,e1.8.0,e1.8.1,e1.9.0
* Adapted for e1.9.0
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Game Versions: e1.7.2,e1.8.0
* Fixed localization loader
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Game Versions: e1.7.2,e1.8.0
* Updated dependencies
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Game Versions: e1.7.2,e1.8.0
* Localization fix
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Game Versions: e1.7.2,e1.8.0
* Added settings for subsystems
* Minor code adjustments
* Better module resolution
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Game Versions: e1.7.2,e1.8.0
* Crash report was not showing in some cases, better filtering
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Game Versions: e1.7.2,e1.8.0
* e1.8.0 hotfix broke ABI, recompilation
---------------------------------------------------------------------------------------------------
Version: 2.1.11
Game Versions: e1.7.2,e1.8.0
* Updated crash upload url
---------------------------------------------------------------------------------------------------
Version: 2.1.10
Game Versions: e1.7.2,e1.8.0
* Updated crash upload url
---------------------------------------------------------------------------------------------------
Version: 2.1.9